# ithings

./: .dockerignore  .gitignore  Cargo.toml  ReadMe.md  add_device_menus.py  check_permissions.py  config.json  configmap.json  driver-config.json  fix_menu_paths.py  print_menus.py  test-group-config.sh  todo.md  verify_menu_files.py
common/: Cargo.toml
common/src/: lib.rs  types.rs
common/src/config/: device.rs  driver.rs  group.rs  kafka.rs  mod.rs  mqtt.rs  publish.rs  topics.rs  zmq.rs
common/src/device/: manager.rs
common/src/device_core/: builder.rs  device_trait.rs  event.rs  mod.rs  property.rs  rule.rs  runtime.rs  service.rs  state_machine.rs  thing_model.rs
common/src/driver/: discovery.rs  mod.rs
common/src/transport/: driver_comm.rs  driver_comm_factory.rs  factory.rs  kafka.rs  kafka_sub.rs  mod.rs  mqtt.rs  mqtt_sub.rs  publisher.rs  subscriber.rs  zmq_client.rs  zmq_server.rs  zmq_sub.rs
config/: finance.json
config/devices/: electric-meter-group.json
deploy/: README.md  start.sh
deploy/docker/: bacnet-driver.Dockerfile  build.sh  device-meter.Dockerfile  modbus-driver.Dockerfile  push.sh  zmq-router  zmq-router.Dockerfile
deploy/k8s/: DEPLOY_STATUS.md  README.md  configmaps.yaml  deploy.sh  device-meter-deployment.yaml  electric-meter-group-sidecar.yaml  modbus-driver-deployment.yaml  namespace.yaml  tdengine-insight.yaml  tdengine.yaml  uninstall-k3s.sh
devices/example/: Cargo.toml
devices/example/src/: device.rs  lib.rs  main.rs
devices/meter/: Cargo.toml
devices/meter/examples/: meter-config-test.json  meter-config-thingmodel.json  meter-config.json
devices/meter/src/: device.rs  lib.rs  main.rs  meter_driver.rs
doc/: BUILD.md  device-running.md  driver.md  k3sregistry.md  model.md
docker/: build.sh
docs/: how-to-implement-device.md  how-to-implement-protocol-driver.md
drivers/: Cargo.toml  readme.MD
drivers/bacnet/: Cargo.toml  config.example.json
drivers/bacnet/src/: config.rs  driver.rs  lib.rs  main.rs
drivers/driver-core/: Cargo.toml
drivers/driver-core/src/: config.rs  device_manager.rs  driver.rs  error.rs  lib.rs  publisher.rs  subscriber.rs  types.rs
drivers/modbus/: Cargo.toml  README.md  modbus.json  zmq_subscribe.py
drivers/modbus/src/: config.rs  driver.rs  lib.rs  main.rs
drivers/zmq-router/: Cargo.toml
drivers/zmq-router/src/: main.rs
finance/: Cargo.toml  init_tables.sql
finance/doc/: 功能模块.md
finance/src/: lib.rs  main.rs
icloud/: .gitignore  Cargo.toml  add_resource_menus.sql  add_scm_extended_menus.sql  add_scm_menus.sql  cleanup_i18n_menu.sql  finance_menu.sql  finance_menu_update.sql  generate_hash.rs  grant_scm_menus_by_role.sql  grant_scm_menus_to_zhangyh.sql  grant_scm_menus_to_zhangyh_new.sql  remove_namespace_site_id.sql  scm_menu_redesign.sql  scm_migrations_part2.sql  test_create_tenant.py  test_logout.py  test_tenant.py  todo.md
icloud/examples/: check_tenants.rs  test_registry.rs  update_tenant_registry.rs
icloud/migrations/: add_device_id_to_device_instances.sql  add_device_image.sql  add_device_image_to_device.sql  add_product_device_image.sql  add_rule_to_products.sql  alter_device_instances_product_id_nullable.sql  device_group_fix.sql  fix_node_id.sql  remove_device_images_from_device_groups.sql
icloud/src/: config.rs  k8s.rs  main.rs
icloud/src/api/: config_map.rs  controller.rs  crd.rs  department.rs  device.rs  device_group.rs  device_instance.rs  driver.rs  logout.rs  menu.rs  mod.rs  namespace.rs  node.rs  operator.rs  organization.rs  product.rs  role.rs  role_menu.rs  secret.rs  site.rs  tenant.rs  user.rs  user_role.rs
icloud/src/cache/: tenant.rs
icloud/src/entity/: config_map.rs  controller.rs  crd.rs  department.rs  device.rs  device_group.rs  device_instance.rs  driver.rs  menu.rs  mod.rs  namespace.rs  node.rs  operator.rs  organization.rs  product.rs  role.rs  role_menu.rs  secret.rs  site.rs  tenant.rs  token_blacklist.rs  user.rs  user_role.rs
icloud/src/middleware/: auth.rs  jwt.rs  jwt_service.rs  mod.rs
icloud/src/migration/: mod.rs
icloud/src/response/: mod.rs
icloud/src/service/: cache.rs  config_map.rs  controller.rs  crd.rs  department.rs  device.rs  device_group.rs  device_instance.rs  driver.rs  menu.rs  mod.rs  namespace.rs  node.rs  operator.rs  organization.rs  product.rs  role.rs  role_menu.rs  secret.rs  site.rs  tenant.rs  user.rs  user_role.rs
icloud/src/utils/: error.rs  k8s.rs  mod.rs
icloud/templates/: device-group-configmap.yaml  device-group.yaml
mes/: API文档.md  Cargo.toml  README.md
mes/docs/: MES系统设计文档.md
mes/scripts/: er.dot  er.py
mes/src/: main.rs
mes/src/api/: defect_record.rs  employee.rs  equipment.rs  inspection_order.rs  inventory.rs  location.rs  maintenance_plan.rs  material.rs  mod.rs  process.rs  process_route.rs  product.rs  production_line.rs  production_record.rs  schedule_plan.rs  stock_movement.rs  warehouse.rs  work_order.rs  work_station.rs  workshop.rs
mes/src/config/: mod.rs
mes/src/entity/: defect_record.rs  employee.rs  equipment.rs  inspection_order.rs  inventory.rs  location.rs  maintenance_plan.rs  material.rs  mod.rs  process.rs  process_route.rs  product.rs  production_line.rs  production_record.rs  schedule_plan.rs  skill_certificate.rs  stock_movement.rs  warehouse.rs  work_order.rs  work_station.rs  workshop.rs
mes/src/migration/: mod.rs
mes/src/response/: mod.rs
mes/src/service/: defect_record.rs  employee.rs  equipment.rs  inspection_order.rs  inventory.rs  location.rs  maintenance_plan.rs  material.rs  mod.rs  process.rs  process_route.rs  product.rs  production_line.rs  production_record.rs  schedule_plan.rs  stock_movement.rs  warehouse.rs  work_order.rs  work_station.rs  workshop.rs
mes/src/utils/: mod.rs
registry-certs/: config.yml  domain.crt  domain.key
scm/: API文档.md  Cargo.toml  README.md  config.json  init_tables.sql
scm/doc/: database_design.md  implementation_guide.md  readme.md
scm/src/: main.rs
scripts/: mqtt_subscribe.py  zmq_subscribe.py
web/: .umirc.ts  Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json
(+190 files in other folders)
