[package]
name = "common"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
config.workspace = true
clap.workspace = true
zmq.workspace = true
rumqttc.workspace = true
rdkafka.workspace = true
regex.workspace = true
futures.workspace = true
