[package]
name = "device-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "device-example"
path = "src/main.rs"

[dependencies]
common = { path = "../../common" }
driver-core = { path = "../../drivers/driver-core" }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
