[package]
name = "driver-modbus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "modbus-driver"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
common.workspace = true
driver-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
config.workspace = true
clap.workspace = true
zmq.workspace = true

tokio-modbus = "0.9"
