[package]
name = "zmq-router"
version = "0.1.0"
edition = "2021"
description = "ZeroMQ Router for driver-device communication"

[[bin]]
name = "zmq-router"
path = "src/main.rs"

[dependencies]
zmq = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
